--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,6 @@
-name: Publish Packages on release
+name: Publish Packages
 
 on:
-  # Run when a new release is published.
   release:
     types:
       - published
@@ -12,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      # Configure and publish to NPM
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
