--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "usefultags",
   "version": "1.1.2",
-  "description": "A tiny JavaScript library incorporating some useful template tag functions.",
+  "description": "A tiny JavaScript library providing some useful template tag functions.",
   "main": "dist/usefulTags.js",
   "browser": "dist/usefulTags.js",
   "unpkg": "dist/usefulTags.js",
@@ -11,8 +11,8 @@
   ],
   "types": "dist/usefulTags.d.ts",
   "scripts": {
-    "test": "node test.js && node test.mjs",
-    "build": "npx babel usefulTags.mjs --out-file ./dist/usefulTags.js && npx ncp ./usefulTags.mjs ./dist/usefulTags.mjs && npx ncp ./usefulTags.d.ts ./dist/usefulTags.d.ts"
+    "test": "node ./test.js && node ./test.mjs",
+    "build": "npx babel ./usefulTags.mjs --out-file ./dist/usefulTags.js && npx minify ./usefulTags.mjs --sourceType module --out-file ./dist/usefulTags.mjs && npx ncp ./usefulTags.d.ts ./dist/usefulTags.d.ts"
   },
   "engines": {
     "node": ">=0.2",
@@ -45,14 +45,15 @@
   },
   "homepage": "https://github.com/TheThunderGuyS/usefulTags#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "babel-eslint": "^10.1.0",
+    "babel-minify": "^0.5.1",
     "babel-preset-minify": "^0.5.1",
-    "eslint": "^7.16.0",
+    "eslint": "^7.24.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "ncp": "^2.0.0",
     "prettier": "^2.2.1"
   }
