--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,4 @@
 root = true
-
 [*]
 indent_style = space
 indent_size = 4
@@ -7,10 +6,7 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-
-[{test*,*.md}]
+[test*]
 trim_trailing_whitespace = false
-
 [{package.json,package-lock.json}]
-indent_style = space
 indent_size = 2
